# ml-2025

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  autoencoder.txt  cmake_install.cmake  data_download.sh  mlc.sh  pg-rivotril.py  pyproject.toml  pyrightconfig.json  run_experiment.py  test.txt
01_cuda/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
01_cuda (Ganacim)/template/src/: kernel.cu
01_cuda/01_cuda/: Makefile  cmake_install.cmake
01_cuda/01_cuda/mandelbrot_set/: Makefile  cmake_install.cmake
01_cuda/01_cuda/matrix_multiplication/: Makefile  cmake_install.cmake
01_cuda/01_cuda/max_value/: Makefile  cmake_install.cmake
01_cuda/01_cuda/template/: Makefile  cmake_install.cmake
01_cuda/Histograma/src/: CMakeLists.txt  Vector.cpp  cpu.cpp  cpu.h  cuda.cu  cuda.h  error.cpp  kernel.cu  kernel.h  main.cpp  timer.cpp  timer.h
01_cuda/Max/: CMakeCache.txt  Makefile  cmake_install.cmake
01_cuda/Max/Max/: Makefile  cmake_install.cmake
01_cuda/Max/matrix_multiplication/: Makefile  cmake_install.cmake
01_cuda/Max/src/: CMakeLists.txt  Vector.cpp  Vector.h  cpu.cpp  cpu.h  cuda.cu  cuda.h  error.cpp  kernel.cu  kernel.h  main.cpp  timer.cpp  timer.h
01_cuda/Max/template/: Makefile  cmake_install.cmake
01_cuda/mandelbrot/: CMakeLists.txt  kernel.cu  kernel.h  main.cpp  main_cpu.cpp  readme.md
01_cuda/mandelbrot/src/: CMakeLists.txt  kernel.cu  main.cpp
01_cuda/matrix_convolution/: Makefile  cmake_install.cmake  filtered_image.pgm  noisy_image.pgm
01_cuda/matrix_convolution/src/: CMakeLists.txt  Makefile  cmake_install.cmake  cpu.cpp  cpu.h  kernel.cu  kernel.h  main.cpp  matrix.cpp  matrix.h
01_cuda/matrix_multiplication/: CMakeCache.txt  Makefile  cmake_install.cmake
01_cuda/max/: CMakeLists.txt  Makefile  cmake_install.cmake  kernel.cu  main.cpp  readme.md
01_cuda/max/src/: CMakeLists.txt  Makefile  cmake_install.cmake  cpu.cpp  cpu.h  kernel.cu  kernel.h  main.cpp  vector.cpp  vector.h
01_cuda/template/: cmake_install.cmake
Algoritmos_Paralelos/Maximo/: kernel.cu  kernel.h  kernel_cuda  main.cpp
Algoritmos_Paralelos/Media/: Relatorio.md  kernel.cu  kernel.h  kernel_cuda
homework/: cnn.aux  cnn.fdb_latexmk  cnn.fls  cnn.out  cnn.tex  cnn.toc  preamble.tex
mlc/: __init__.py  __main__.py
mlc/command/: __init__.py  base.py  help.py  test.py
mlc/data/: basedataset.py
mlc/data/mnist/: dataset.py  (+1 more)
mlc/model/: basemodel.py  eval.py  train.py  train_gan.py  train_gan2.py  train_gan_intro.py  train_vae_gan.py
mlc/reinforce/: car_nets.py  train_car.py
mlc/reinforcement/: cnn.py  dqn.py  gym.py  network.py  networks.py  pg-bce.py  pg-tetris.py  pg.py  train copy.py  train.py
mlc/util/: board.py  model.py  resources.py
models/cnn_vae/: cnn_vae_wpretrain
notebooks/: auto_encoders.ipynb  env_testing.ipynb  env_testing.py  eval_visualization.ipynb  gans.ipynb  plots.ipynb  reinforcement.ipynb  reinforcement.py  reinforcement_nb.ipynb  spiral.ipynb  vae.ipynb
(+363 files in other folders)
